--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = menus
+name = menutools
 version = 1.0.0
 description = Create a command-line menu
 long_description = file: README.md
@@ -7,7 +7,7 @@ long_description_content_typr = text/markdown
 license = MIT
 author = Seyed Jafar Yaghoubi
 author_email = algo3xp3rt@gmail.com
-url = https://github.com/J-Yaghoubi/menus
+url = https://github.com/J-Yaghoubi/menutools
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
