--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-__pycache__/
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
 
 .*
-
+__pycache__/
+__pycache__
 !/.gitignore
+build/
